Fix spacing between grids.

--- a/pg.css
+++ b/pg.css
@@ -156,6 +156,7 @@ input:checked ~ label {
   animation: gradient 10s ease infinite;
   padding: 0px;
   margin: 0px;
+  margin-bottom: 50px;
 }
 /* main > div {
   border: 3px solid red;
